--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "resturant",
   "version": "0.1.0",
-  "homepage":"https://armada6199.github.io/resturant",
+  "homepage":".",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -16,7 +16,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npm run build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
